crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parens_in_value_def_annotation_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "i #\nN : b\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        Ident=>LowerIdent@0
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@1
            InlineTypeColon=>OpColon@2
            Ident=>LowerIdent@3
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@4
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("i")
TypeAlias(UpperIdent("N"), Name("b"))
Ident("a")

[=== formatted below ===]

