crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthesized_type_def_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(D):b\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            (BeginParens UpperIdent=>UpperIdent@1 EndParens)
            InlineTypeColon=>OpColon@3
            Ident=>LowerIdent@4
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@5
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("D"), Name("b"))
Ident("a")

[=== formatted below ===]

