crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthesized_type_def_space_before_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "A : b\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            Ident=>LowerIdent@2
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("A"), Name("b"))
Ident("a")

[=== formatted below ===]

