crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthetical_apply_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(whee) 1\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            (BeginParens Ident=>LowerIdent@1 EndParens)
            InlineApply=>CloseRound@2
            Num=>IntBase10@3
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("whee"), [IntBase10("1")])

[=== formatted below ===]

