crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthetical_basic_field_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(rec).field\n"
---
(BeginTopLevelDecls
    HintExpr
    (*
        (BeginParens Ident=>LowerIdent@1 EndParens)
        DotIdent=>NoSpaceDotLowerIdent@3
    EndFieldAccess)
EndTopLevelDecls)

[=== canfmt below ===]
RecordAccess(Ident("rec"), ".field")

[=== formatted below ===]

