crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthetical_field_qualified_var_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(One.Two.rec).field\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (*
            (BeginParens
                (*
                    (* ModuleName=>UpperIdent@1 DotModuleUpperIdent)
                    DotIdent=>NoSpaceDotLowerIdent@3
                EndFieldAccess)
            EndParens)
            DotIdent=>NoSpaceDotLowerIdent@5
        EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(RecordAccess(ModuleUpperName("One", ".Two"), ".rec"), ".field")

[=== formatted below ===]

