crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthetical_var_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(whee)\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginParens Ident=>LowerIdent@1 EndParens)
EndTopLevelDecls)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]

