crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__parenthetical_var_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "whee\n"
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]

